Closed
Bug 31186
Opened 26 years ago
Closed 26 years ago
Cannot type into the email address field in account setup wizard
Categories
(SeaMonkey :: MailNews: Account Configuration, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M15
People
(Reporter: prass, Assigned: joki)
References
Details
(Keywords: smoketest)
Steps to Reproduce:
1. rm -r ~/.mozilla
2. Create a new profile
3. In navigator choose tasks->Mail
4. Observe account set up wizard shows up
5. Choose existing mail account using other email provider
6. Click next.
7. enter username
8. try to enter email address
Expected result: can type in the email address in this field
Actual result: cannot put focus in email field
Build:2000030909
Platform:Linux
Comment 1•26 years ago
|
||
uh.. that's pretty strange. some kind of focus bug, reassign to saari.
Assignee: alecf → saari
Comment 2•26 years ago
|
||
including granrose - unless saari has a fix this should probably hold the tree
closed - you cannot create mail accounts with today's build because of this,
which prevents QA from testing
Severity: normal → blocker
Comment 3•26 years ago
|
||
cc joki in case he has any clues
Comment 4•26 years ago
|
||
adding smoketest so it shows up on the list of blockers.
Keywords: smoketest
| Assignee | ||
Comment 6•26 years ago
|
||
Mine, unfortunately. Sorry guys. I did check sending and receiving mail but I
already had my profile set up. I have fix.
Assignee: saari → joki
| Assignee | ||
Comment 7•26 years ago
|
||
Here's the fix
Index: nsEventListenerManager.cpp
===================================================================
RCS file: /cvsroot/mozilla/layout/events/src/nsEventListenerManager.cpp,v
retrieving revision 1.62
diff -r1.62 nsEventListenerManager.cpp
1475c1475
< *aEventStatus = (aEvent->flags & NS_EVENT_FLAG_NO_DEFAULT) || mDestroyed
---
> *aEventStatus = (aEvent->flags & NS_EVENT_FLAG_NO_DEFAULT)
Comment 8•26 years ago
|
||
get it reviewed and approved and let's get it checked in.
Target Milestone: M15
| Assignee | ||
Comment 9•26 years ago
|
||
Okay, fix is in.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 10•26 years ago
|
||
*** Bug 31223 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 11•26 years ago
|
||
*** Bug 31198 has been marked as a duplicate of this bug. ***
Comment 12•26 years ago
|
||
Build 2000-03-09-13M15: Linux 6.0, Fixed.
Waiting on the next Windows and Mac build.
Comment 13•26 years ago
|
||
*** Bug 31270 has been marked as a duplicate of this bug. ***
Comment 14•26 years ago
|
||
*** Bug 31270 has been marked as a duplicate of this bug. ***
Comment 15•26 years ago
|
||
Build 2000-03-09-13M15: NT4, Mac 8.5.1
Verified Fixed. Now able to type into the email address field in the Account
Setup Wizard. Also able to change entries in any Account Settings panel such as
Identity, Server or Copies and Folders.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•