Fix for bug 31186, backout of part of fix for 28988.  r:saari a:leaf and the rest of the irc crowd to fix tree blocker